# AI-Steering-Behaviors-With-SDL-OpenGL-NVidia-Scenix-

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  SDLNV.cbp  SDLNV.layout  cmake_install.cmake
CMakeTmp/: CMakeCache.txt  CMakeLists.txt  DetermineSoundLibs  DetermineSoundLibs.c  Makefile  cmake_install.cmake
src/: Agent.cpp  Agent.h  AgentDynamic.cpp  AgentDynamic.h  CameraSystem.cpp  CameraSystem.h  PhysXRBDPrimatives.h  PhysXSimulation.h  PlayerCharacter.h  main.cpp  main.cpp~
